--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Augustine || Full Stack Web Developer</title>
+    <title>Augustine || Full Stack Web Developer || Mobile App Developer</title>
 </head>
 <body>
     <div class="cursor"></div>
