--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -59,14 +60,14 @@
                     Hello, Welcome
                 </p><br>
                 <h1 class="titlename">
-                   <span> I'm Augustine</span><br>
-                   <span>Full Stack Web Developer</span>
+                   <span> I'm Augustine,</span><br>
+                   <span>A Software Developer</span>
                 </h1><br>
                 <article id="hire_box">
                     Hire me
                 </article><br>
                 <p class="build">
-                    Building Fast, Secure, and Responsive Web Applications.
+                    Building Fast, Secure, and Responsive Web & Mobile Applications.
                     Developing the Future, One Line of Code at a Time
                 </p><br>
                 <article id="followCon">
@@ -112,7 +113,7 @@
         </p><br>
         </p><br>
         <article id="services_inner">
-            <div class="serbox">
+            <div class="serbox" data-aos="fade-right">
                 <ul>
                     <li><img src="img/site.png" alt=""></li>
                 </ul>
@@ -124,7 +125,7 @@
                     <li>- Development of dynamic web apps using frameworks like ReactJS and Laravel.</li>
                 </ul>
             </div>
-            <div class="serbox">
+            <div class="serbox" data-aos="fade-right">
                 <ul>
                     <li><img src="img/laptop-code.png" alt=""></li>
                 </ul>
@@ -135,7 +136,7 @@
                     <li>- Third-party integrations</li>
                 </ul>
             </div>
-            <div class="serbox">
+            <div class="serbox" data-aos="fade-right">
                 <ul>
                     <li><img src="img/ecommerce.png" alt=""></li>
                 </ul>
@@ -146,7 +147,7 @@
                     <li>- Inventory and order management features (ties into your inventory management system idea)</li>
                 </ul>
             </div>
-            <div class="serbox hidden">
+            <div class="serbox hidden" data-aos="fade-left">
                 <ul>
                     <li><img src="img/support.png" alt=""></li>
                 </ul>
@@ -157,7 +158,7 @@
                     <li>- Backup and recovery services</li>
                 </ul>
             </div>
-            <div class="serbox hidden">
+            <div class="serbox hidden" data-aos="fade-right">
                 <ul>
                     <li><img src="img/seo.png" alt=""></li>
                 </ul>
@@ -168,7 +169,7 @@
                     <li>- Improving site ranking through performance and content strategies</li>
                 </ul>
             </div>
-            <div class="serbox hidden">
+            <div class="serbox hidden" data-aos="fade-left">
                 <ul>
                     <li><img src="img/devops.png" alt=""></li>
                 </ul>
@@ -182,7 +183,7 @@
             <div id="seemore">See More</div>
         </article>
     </section>
-    <section id="tech">
+    <section id="tech" >
         <h3>Technologies & Tools i use </h3><br>
         <article id="tech_inner">
             <div>
@@ -218,7 +219,7 @@
         </article>
     </section>
     <section id="about">
-        <article id="about_inner">
+        <article id="about_inner" data-aos="fade-up">
             <!-- <img src="img/item (3).png" alt="">
             <img src="img/item (2).png" alt="">
             <img src="img/item.png" alt="">
@@ -258,7 +259,7 @@
     <section id="project">
         <h3>My Projects </h3><br>
         <article id="project_inner">
-            <div>
+            <div data-aos="fade-up">
                 <article id="project_img" class="proimg1">
                     <img src="img/twices as good mockup.png" alt="">
                 </article>
@@ -276,7 +277,7 @@
                     </ul>
                 </article>
             </div>
-            <div>
+            <div data-aos="fade-up">
                 <article id="project_img" class="proimg2">
                     <img src="img/atompay.png" alt="">
                 </article>
@@ -293,7 +294,7 @@
                     </ul>
                 </article>
             </div>
-            <div>
+            <div data-aos="fade-up">
                 <article id="project_img" class="proimg3">
                     <img src="img/estate png.png" alt="">
                 </article>
@@ -355,7 +356,7 @@
                     </div>
                     <span class="line"></span>
                 </li>
-                <li>
+                <li data-aos="fade-up">
                     <h4>Janury 2023 - Present</h4><br>
                     <h2>Webcapz Technologies</h2>
                     <p>Full Stack Web Developer</p><br>
@@ -376,7 +377,7 @@
                     </div>
                     <span class="line"></span>
                 </li>
-                <li>
+                <li data-aos="fade-up">
                     <h4>Janury 2023 - Present</h4><br>
                     <h2>Webcapz Technologies</h2>
                     <p>Full Stack Web Developer</p><br>
@@ -461,6 +462,33 @@
             </article>
         </section>
 	</section>
+    <footer id="footer">
+        <article id="footer_inner" data-aos="fade-up">
+            <div id="footerbox1">
+                <h3>
+                    Get in touch
+                </h3>
+                <form action="">
+                    <input type="text" placeholder="name">
+                    <input type="email" placeholder="email">
+                    <textarea name="" id="" placeholder="message"></textarea>
+                    <button>Submit</button>
+                </form>
+            </div>
+            <div id="footerbox2">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus 
+                    vel temporibus eum rerum inventore, quibusdam dolor blanditiis facere 
+                    eveniet voluptates?
+                </p><br>
+                <img id="location" src="img/Location.png" alt="">
+            </div>
+        </article>
+    </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
 </body>
